--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -12,21 +12,21 @@ permissions:
   id-token: write
 
 jobs:
-  generate-readme: node -e "
-    const fs = require('fs');
-    const { JSDOM } = require('jsdom');
+  generate-readme: 
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    // Load index.html
-    const htmlContent = fs.readFileSync('index.html', 'utf-8');
-    const dom = new JSDOM(htmlContent);
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-    // Extract <title> and first <p> as description
-    const title = dom.window.document.querySelector('title')?.textContent || 'My Project';
-    const description = dom.window.document.querySelector('p')?.textContent || 'Description not available.';
+      # Install dependencies (if needed)
+      - name: Install dependencies
+        run: npm install
 
-    // Generate README content
-    const readmeContent = \`# \${title}\n\n\${description}\n\nThis README was generated automatically from index.html.\`;
-
-    // Write to README.md
-    fs.writeFileSync('README.md', readmeContent);
-    "
+      # Run JavaScript code
+      - name: Run JavaScript Code
+        run: node move_to_readme.js
