--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Install dependencies
+        run: npm install jsdom --save
+
       # Run JavaScript code
       - name: Run JavaScript Code
         run: node .github/workflows/move_to_readme.js
