--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -31,4 +31,4 @@ jobs:
         run: node .github/workflows/move_to_readme.js
 
       - name: Commit and push to repo
-        run: git add . & git commit -m "New README" & git push
+        run: git add README.md & git commit -m "New README" & git push
