--- a/.github/workflows/change_title_input.yaml
+++ b/.github/workflows/change_title_input.yaml
@@ -43,6 +43,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add index.html
           git commit -m "Change page title to '${{ github.event.inputs.title || 'Default Title' }}'"
           git push
