--- a/.github/workflows/change_title_input.yaml
+++ b/.github/workflows/change_title_input.yaml
@@ -26,12 +26,7 @@ jobs:
     # Step 3: Install necessary dependencies using npx
       - name: Install dependencies
         run: |
-          npm install htmlhint jsdom
- 
-      # Step 4: Run HTML linter
-      - name: Run HTML linter
-        run: |
-          npm htmlhint index.html
+          npm install jsdom
  
       # Step 5: Modify the title in index.html based on user input
       - name: Change Page Title
