--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -34,6 +34,11 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Auto-generate README from index.html"
-          git push
+          # Check if there are changes to commit
+          if [[ `git diff --name-only` ]]; then
+            git add .
+            git commit -m "Auto-generate README from index.html"
+            git push
+          else
+            echo "No changes to commit"
+          fi
