--- a/.github/workflows/change_title_input.yaml
+++ b/.github/workflows/change_title_input.yaml
@@ -38,6 +38,11 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add index.html
-          git commit -m "Change page title to '${{ github.event.inputs.title || 'Default Title' }}'"
-          git push
+                    # Check if there are changes to commit
+          if [[ `git diff --name-only` ]]; then
+            git add .
+            git commit -m "Change page title to '${{ github.event.inputs.title || 'Default Title' }}'"
+            git push
+          else
+            echo "No changes to commit"
+          fi
