--- a/.github/workflows/deploy_only_with_all_tests_pass.yaml
+++ b/.github/workflows/deploy_only_with_all_tests_pass.yaml
@@ -1,9 +1,6 @@
 name: Deploy Only If All Tests Pass
  
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch: # Allows manual triggering of the workflow
  
 permissions:
@@ -28,7 +25,7 @@ jobs:
       # Step 3: Install dependencies using npx (htmlhint for linter)
       - name: Install dependencies
         run: |
-          npm install htmlhint jsdom
+          npm install htmlhint jsdom --save
  
       # Step 4: Run HTML linter
       - name: Run HTML linter
